feat(hyperpaas-manager): Added base of service metrics
